# geomanim

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
docs/: QUICKSTART.md
examples/: 00_simple_test.py  01_basic_world_map.py  02_plot_cities.py  03_choropleth_map.py  04_animated_paths.py  05_highlight_regions.py  06_custom_styling.py  09_cross_country_routes.py  09_cross_country_routes_simple.py  10_earthquakes_dynamic_title.py  10_earthquakes_simple.py  README.md  README_cross_country.md  demo_animation.py  earthquakes_very_major.geojson  pure_manim2d.py  pure_manim3D.py  real_world_example.py  routes_merged.geojson
geomanim/: __init__.py  animate.py
geomanim/assets/: basemap_bounds.txt
geomanim/core/: __init__.py
geomanim/data/: __init__.py  loaders.py
geomanim/map2d/: __init__.py  map.py
geomanim/utils/: __init__.py  basemap.py  colors.py  coordinates.py
scripts/: prepare_assets.py
tests/: __init__.py  conftest.py
tests/test_map2d/: __init__.py
