[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomanim"
version = "0.1.0"
description = "Geospatial visualization and animation library using Manim"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kamol Roy", email = "kamol.roy08@gmail.com"}
]
keywords = ["manim", "geospatial", "visualization", "animation", "gis", "maps", "geography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "manim>=0.17.0",
    "numpy>=1.21.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "pyproj>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.20",
]
docs = [
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
Homepage = "https://github.com/kamolroy/geomanim"
Documentation = "https://geomanim.readthedocs.io"
Repository = "https://github.com/kamolroy/geomanim"
"Bug Tracker" = "https://github.com/kamolroy/geomanim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["geomanim*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
geomanim = ["assets/data/*", "assets/textures/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=geomanim --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
